--- a/src/views/port/menu.ejs
+++ b/src/views/port/menu.ejs
@@ -9,6 +9,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/api/advertisements">Объявления</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/api/users">Пользователи</a>
+        </li>
       </ul>
       <% if(createAdvBtn) { %>
         <button type="button" class="btn btn-success mx-2" data-bs-toggle="modal" data-bs-target="#addAdvModal">
