--- a/src/views/adv/index.ejs
+++ b/src/views/adv/index.ejs
@@ -35,4 +35,4 @@
   <h3 class="mt-5">Список объявлений пуст!</h3>
 <% } %>
 
-<%- include('../port/layout-end') %>
+<%- include('../port/layout-end', { socketActive: false }) %>
