--- a/src/views/errors/404.ejs
+++ b/src/views/errors/404.ejs
@@ -3,4 +3,4 @@
 
 <h3 class="mt-5"><%= text %></h3>
 
-<%- include('../port/layout-end') %>
+<%- include('../port/layout-end', { socketActive: false }) %>
