--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,4 +1,4 @@
 <%- include('./port/layout-start', { title: title }) %>
 <%- include('./port/menu', { title: title, createAdvBtn: false, authBtn: authBtn }) %>
 
-<%- include('./port/layout-end') %>
+<%- include('./port/layout-end', { socketActive: false }) %>
